@@ -1,24 +1,22 @@
-!> Plotmdln.f90:   Plots the data contained in star.mdl, for some or all (n) structure models in the file, ONE variable
-!! Lines are longer than 72 chars, so add --wide (lf) or -132 (ifort) to compile
-!! Uses PGPLOT window 3 to plot to
-!! AF, 19-05-2005
-!!
-!!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
-!!   
-!!   
-!!   This file is part of the eggleton-plot package.
-!!   
-!!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
-!!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-!!   
-!!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-!!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-!!   
-!!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
-!!   <http://www.gnu.org/licenses/>.
-!<
+!> \file plotmdln.f90   Plots the data contained in star.mdl, for some or all (n) structure models in the file, and for ONE set of variables
+
+!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
+!   
+!   
+!   This file is part of the eggleton-plot package.
+!   
+!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
+!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+!   
+!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+!   
+!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
+!   <http://www.gnu.org/licenses/>.
 
 
+
+!> Plot the data contained in star.mdl, for some or all (n) structure models in the file, and for ONE set of variables
 program plotmdln  
   use constants
   
@@ -421,12 +419,22 @@ program plotmdln
            call pgsci(1)
         end if
      end if
-     call pgscf(2)
+     call pgscf(1)
      call pgscr(7,0.7,0.7,0.7)  !Replace yellow by light grey
 
      call pgsvp(0.06,0.95,0.07,0.96)
      call pgswin(xmin,xmax,ymin,ymax)
-     call pgbox('BCNTS',0.0,0,'BCNTS',0.0,0)
+     
+     if(log.eq.'x') then
+        call pgbox('BCLNTS',0.0,0,'BCNTS',0.0,0)  !log x, lin y
+     else if(log.eq.'y') then
+        call pgbox('BCNTS',0.0,0,'BCLNTS',0.0,0)  !lin x, log y
+     else if(log.eq.'b') then
+        call pgbox('BCLNTS',0.0,0,'BCLNTS',0.0,0) !log x,y
+     else
+        call pgbox('BCNTS',0.0,0,'BCNTS',0.0,0)   !lin x,y
+     end if
+     
      call pgmtxt('T',0.7,0.5,0.5,title(13:100))  !13, to remove /home/user/
      call pgmtxt('B',2.4,0.5,0.5,lx)
      call pgmtxt('L',2.0,0.5,0.5,ly)
