@@ -1,25 +1,26 @@
-!> Plotmod.f90
-!! Reads an input or output structure model file for Eggeltons TWIN code v.2003 and lists the properties of each model it contains.
-!! One can then select a model to plot its contents. Adapted from Listmod.f
-!! Lines are longer than 72 chars, so add --wide (lf) or -132 (ifort) to compile
-!! AF 2004-08-05
+!> \file plotmod.f90  Reads an input or output structure model file for Eggeltons TWIN code and lists the properties of each model it contains.
 !!
-!!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
-!!   
-!!   
-!!   This file is part of the eggleton-plot package.
-!!   
-!!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published 
-!!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-!!   
-!!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-!!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-!!   
-!!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
-!!   <http://www.gnu.org/licenses/>.
+!! One can then select a model to plot its contents. Adapted from listmod.f90
+!! AF 2004-08-05
 !<
 
+!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
+!   
+!   
+!   This file is part of the eggleton-plot package.
+!   
+!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published 
+!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+!   
+!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+!   
+!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
+!   <http://www.gnu.org/licenses/>.
 
+
+
+!> \brief Plot the contents of the *.mod output file of ev
 program plotmod
   use kinds
   use constants
