@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+   109: AstroFloyd, 21/07/2010
+     - Update documentation/comments
+     
    108: AstroFloyd, 21/07/2010
      - Added Doxyfile
      - Added/improved comments in function files
